--- a/emerg alert updated/index.html
+++ b/emerg alert updated/index.html
@@ -109,7 +109,7 @@
 					<p>
 						Emerg Alert® enables responders to digitally alert drivers inside vehicles for safer roads.
 					</p>
-					<button class="welcome-btn" onclick="window.location.href='working-server-side-main/index.html'">>BOOK A DEMO</a></button>
+					<button class="welcome-btn" onclick="window.location.href='working-server-side-main/index.html'">DEMO</a></button>
 				</div>
 			</div>
 			
